* The root layout now uses flexboxes instead of fixed position elements. * The root layout no longer wraps the <children> prop with the <ResponsiveContainer> component, instead each page/layout must wrap themselves with the <PageWrapper> component, the reason is explained in a comment at the /app/layout.tsx. * Customized the scrollbars.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-violet-100;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-gray-400 rounded-full;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-500;
+  }
+}
+
 @layer components {
-  /* Hide scrollbar for Chrome, Safari and Opera */
+  /* Track */
+
+  /* For hiding an element's scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
 
-  /* Hide scrollbar for IE, Edge and Firefox */
+  /* For hiding an element's scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
